# Common-crypto

./: README.md
AES/AES-c++/: AES.cpp  CMakeLists.txt  README.md  main.cpp  tests.cpp
DES/file-DES/: CMakeLists.txt  main1.cpp  main2.cpp
DES/openssl-DES/: CMakeLists.txt  main.cpp
DES/simple-Des/: CMakeLists.txt  main.c
ECDSA/ECDSA-master/: .gitignore  sign.cpp
ECDSA/ECDSA-openssl/: generate.cpp  verify.cpp
ElGamal/EC-elgamal/: CMakeLists.txt  ec-pk.pem  ec-sk.pem  ec_elgamal_test  ec_elgamal_test.c
ElGamal/EC-elgamal/ec_elgamal_test.dSYM/Contents/: Info.plist
ElGamal/EC-elgamal/ec_elgamal_test.dSYM/Contents/Resources/DWARF/: ec_elgamal_test
ElGamal/ElGamal/: CMakeLists.txt  main.cpp
ElGamal/ElGamal-ECC/: ElGamal.h  main.cpp
ElGamal/ElGamal_sign/: main.py
RSA/RSA_big_enc/: CMakeLists.txt  main.cpp
RSA/RSA_big_miracl_enc/: RSA_big_miracl_enc.sln  RSA_big_miracl_enc.vcxproj  RSA_big_miracl_enc.vcxproj.filters  main.c  miracl.h  mirdef.h
RSA/RSA_sign/: main.py
RSA/RSA_sign_hash/: main.py  sign.txt  test.txt
RSA/RSA_small_enc_homo/: main.cpp
SM2/SM2加解密/: CMakeLists.txt  SM2_ENC.c  SM2_ENC.h
SM2/SM2签名/: CMakeLists.txt  SM2_sv.c  SM2_sv.h  test1.txt
SM2/sm2秘钥协商/: CMakeLists.txt  SM2_KEY_EX.c  SM2_KEY_EX.h
SM3/SM3-simple/: CMakeLists.txt  main.cpp
SM3/SM3-standard/: CMakeLists.txt  main.c
SM4/SM4-openssl/: sm4.h  (+2 more)
SM9/SM9_Key_encap/: CMakeLists.txt  SM9_Key_encap.c  SM9_Key_encap.h
SM9/SM9_Key_encap/include/: zzn12_operation.h
SM9/sm9_exchange_key/: CMakeLists.txt  SM9_Key_ex.c  SM9_Key_ex.h
SM9/sm9_exchange_key/include/: miracl.h
(+46 files in other folders)
